--- a/index.html
+++ b/index.html
@@ -165,11 +165,18 @@
             <span>The best courses is on sale at Atlas Education</span>
             <button class="white">Learn more</button>
         </div>
-        <div class="banner-box">
+        <div class="banner-box2">
             <h4>Crazy deals</h4>
             <h2>Buy 1 get 1 free</h2>
             <span>The best courses is   on sale at Atlas Education</span>
             <button class="white">Learn more</button>
+        </div>
+    </section>
+
+    <section class="banner3">
+        <div class="banner-box">
+            <h2>Sale</h2>
+            <h3>Our opportunities</h4>
         </div>
     </section>
 
